fixed bottom paddings and footer not showing

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -189,21 +189,21 @@ html, body
 				height: 100%
 
 			section[data-section-id='0']
-				padding-bottom: 140px
+				padding-bottom: 130px
 
 			section[data-section-id='1']
 				background-color: #646363 !important
 				padding-bottom: 140px
 
 			section[data-section-id='2']
-				padding-bottom: 120px
+				padding-bottom: 140px
 				background-color: #5588A3 !important
 
 			section[data-section-id='3']
-				padding-bottom: 140px
+				padding-bottom: 170px
 
 			section[data-section-id='4']
-				padding-bottom: 140px
+				padding-bottom: 130px
 				
 				p
 					padding: 25px 0px
@@ -506,17 +506,6 @@ p
 	.timeline-right
 		bottom: 30px
 		right: -20px
-
-#changelog-all-btn
-	color: gainsboro
-	text-decoration: none
-	background-color: #145374
-	padding: 4px 10px
-	border-radius: 3px
-	white-space: nowrap
-	position: relative
-	left: -48px
-	bottom: 10px
 
 /* Q&A */
 
